--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ Terraform/.terraform.lock.hcl
 Terraform/.terraform.tfstate.lock.info
 Terraform/terraform.tfstate
 Terraform/terraform.tfstate.backup
-Terraform/sshkeys.pub
-Terraform/sshkeys
+Terraform/sshkey.pub
+Terraform/sshkey
