--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anime-quote-app",
   "version": "1.0.0",
-  "description": "A simple yet comprehensive DevOps project that incorporates AWS services, Docker, Kubernetes, Terraform, shell scripting, Git, and GitHub Actions for the development and deployment of a basic web application.",
+  "description": "GCP DevOps Project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
