--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,10 +15,10 @@ spec:
       containers:
         - name: anime-quote-app-container
           image: gcr.io/crucial-bucksaw-407710/anime_quote_app_repo/anime_quote_app_image:latest
-          # resources:
-          #   limits:
-          #     memory: "128Mi"
-          #     cpu: "500m"
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
           ports:
             - containerPort: 3000
 ---
